--- a/app/views/partners/dashboard/_chart4.html.erb
+++ b/app/views/partners/dashboard/_chart4.html.erb
@@ -9,9 +9,13 @@
                 <%= t('partner.dashboard.chart4.title') %>
               </span>
               <span class="col-sm-4">
-                  <select class="form-control hide" style="">
-                      <option>1</option>
-                  </select>
+                  
+                  <div class="input-group date" id="datetimepicker4" >  
+                      <input type="text" class="form-control" data-date-format="DD-MM-YYYY"/>
+                      <span class="input-group-addon">
+                          <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                  </div> 
               </span>
           </div>
         
@@ -34,69 +38,81 @@
 <script>
   $(document).ready(function () {
     
-    var chartJson = 
-    $.ajax({url: "/partners/dashboard/chart4.json"})
-    .done(function(chartJson){
-      if(Object.keys(chartJson).length < 1){
-        dataIsFound(false, 7);
-        return;
-      }
-      var ctx = $("#chart4");
-      var gradient = ctx.get(0).getContext('2d').createLinearGradient(0, 0, 0, 200);
-
-        gradient.addColorStop(0, 'rgba(2,117,216,0.4)');
-        gradient.addColorStop(0.2, 'rgba(2,117,216,0.3)');
-        gradient.addColorStop(0.5, 'rgba(2,117,216,0.1)');
-        gradient.addColorStop(1, 'rgba(2,117,216,0.0)');
-      //var fillPattern = ctx.createPattern(img, 'repeat');
-      var data = {
-        labels: Object.keys(chartJson),
-        lineColor:"red",
-        datasets: [
-          {
-            label: "用户增长数",
-            data: Object.values(chartJson),
-            backgroundColor: gradient,
-            borderColor: "rgba(44,101,255,1)",
-            pointRadius: 5,
-            pointBackgroundColor: "rgba(255,255,255,1)",
-            pointBorderColor: "rgba(44,101,255,0.8)",
-            pointHoverRadius: 5,
-            pointHoverBackgroundColor: "rgba(44,101,255,1)",
-            pointHitRadius: 20,
-            pointBorderWidth: 2
-          }
-          
-        ]
-      };
-      var myLineChart = new Chart(ctx.get(0), {
-        type: 'line',
-        data: data,
-        options: {
-          scales: {
-            xAxes: [{
-
-              gridLines: {
-                display: false
-              },
-            }],
-            yAxes: [{
-              gridLines: {
-                display: false
-              }
-            }],
-          },
-          legend: {
-            display: false
-          }
+    var getData = function(){
+      var selectedDate = $('#datetimepicker4').data("DateTimePicker").date().format("DD-MM-YYYY")
+      $.ajax({
+        url: "/partners/dashboard/chart4.json",
+        data: {
+          date: selectedDate
         }
+      })
+      .done(function(chartJson){
+        if(Object.keys(chartJson).length < 1){
+          dataIsFound(false, 7);
+          return;
+        }
+        var ctx = $("#chart4");
+        var gradient = ctx.get(0).getContext('2d').createLinearGradient(0, 0, 0, 200);
+
+          gradient.addColorStop(0, 'rgba(2,117,216,0.4)');
+          gradient.addColorStop(0.2, 'rgba(2,117,216,0.3)');
+          gradient.addColorStop(0.5, 'rgba(2,117,216,0.1)');
+          gradient.addColorStop(1, 'rgba(2,117,216,0.0)');
+        //var fillPattern = ctx.createPattern(img, 'repeat');
+        var data = {
+          labels: Object.keys(chartJson),
+          lineColor:"red",
+          datasets: [
+            {
+              label: "用户增长数",
+              data: Object.values(chartJson),
+              backgroundColor: gradient,
+              borderColor: "rgba(44,101,255,1)",
+              pointRadius: 5,
+              pointBackgroundColor: "rgba(255,255,255,1)",
+              pointBorderColor: "rgba(44,101,255,0.8)",
+              pointHoverRadius: 5,
+              pointHoverBackgroundColor: "rgba(44,101,255,1)",
+              pointHitRadius: 20,
+              pointBorderWidth: 2
+            }
+
+          ]
+        };
+        var myLineChart = new Chart(ctx.get(0), {
+          type: 'line',
+          data: data,
+          options: {
+            scales: {
+              xAxes: [{
+
+                gridLines: {
+                  display: false
+                },
+              }],
+              yAxes: [{
+                gridLines: {
+                  display: false
+                }
+              }],
+            },
+            legend: {
+              display: false
+            }
+          }
+        });
+        dataIsFound(true, 4);
+      })
+      .fail(function(){
+        dataIsFound(false, 4);
       });
-      dataIsFound(true, 4);
-    })
-    .fail(function(){
-      dataIsFound(false, 4);
-    });
+    };
     
-    console.log(chartJson);
+    $('#datetimepicker4').datetimepicker({
+      viewMode: 'years',
+      defaultDate: true
+    }).on('dp.hide',getData); 
+    $('#datetimepicker4').data("DateTimePicker").date(moment());
+    getData();
   });
 </script>
