--- a/app/views/partners/dashboard/_chart4.html.erb
+++ b/app/views/partners/dashboard/_chart4.html.erb
@@ -64,7 +64,7 @@
           lineColor:"red",
           datasets: [
             {
-              label: "用户增长数",
+              label: "<%= t('partner.dashboard.chart4.title') %>",
               data: Object.values(chartJson),
               backgroundColor: gradient,
               borderColor: "rgba(44,101,255,1)",
