--- a/app/views/partners/dashboard/_chart5.html.erb
+++ b/app/views/partners/dashboard/_chart5.html.erb
@@ -69,7 +69,7 @@
           labels: chartlabels,
           datasets: [
             {
-              label: "# of Activities",
+              label: "<%= t('partner.dashboard.chart5.title') %>",
               backgroundColor: gradient,
               borderColor: "rgba(44,101,255,1)",
               pointRadius: 5,
