--- a/app/views/partners/dashboard/_chart6.html.erb
+++ b/app/views/partners/dashboard/_chart6.html.erb
@@ -49,7 +49,7 @@
         data: {
           labels: chartlabels, 
           datasets: [{
-            label: "Tags Distribution",
+            label: "<%= t('partner.dashboard.chart6.title') %>",
             backgroundColor: [
               'rgba(147, 116, 255, 1)',
               'rgba(69, 119, 255, 1)',
