--- a/app/views/partners/dashboard/_chart8.html.erb
+++ b/app/views/partners/dashboard/_chart8.html.erb
@@ -45,7 +45,7 @@
         data: {
           labels: chartlabels,
           datasets: [{
-            label: "用户标签统计",
+            label: "<%= t('partner.dashboard.chart8.title') %>",
             backgroundColor: [
               'rgba(147, 116, 255, 1)',
               'rgba(69, 119, 255, 1)',
