--- a/app/views/partners/dashboard/_chart7.html.erb
+++ b/app/views/partners/dashboard/_chart7.html.erb
@@ -47,7 +47,7 @@
         data: {
           labels: chartlabels, 
           datasets: [{
-            label: "Tags Distribution",
+            label: "<%= t('partner.dashboard.chart7.title') %>",
             backgroundColor: [
               'rgba(147, 116, 255, 1)',
               'rgba(69, 119, 255, 1)',
