update partners dashboard chart6

--- a/app/views/partners/dashboard/_chart7.html.erb
+++ b/app/views/partners/dashboard/_chart7.html.erb
@@ -10,7 +10,7 @@
               </span>
           </div>
         
-        <div class="col-sm-12">
+        <div class="col-sm-12" style="min-height:350px;">
           <canvas class="hide" id="chart7" width="100" height="100"></canvas>
           <div class="no-data-found" id="not-found7">
             <div>
