--- a/app/views/partners/dashboard/_chart6.html.erb
+++ b/app/views/partners/dashboard/_chart6.html.erb
@@ -11,7 +11,7 @@
               
           </div>
         
-        <div class="col-sm-12">
+        <div class="col-sm-12" style="min-height:350px;">
           <canvas class="hide" id="chart6" width="100" height="100"></canvas>
           <div class="no-data-found" id="not-found6">
             <div>
