--- a/app/views/partners/dashboard/_chart4.html.erb
+++ b/app/views/partners/dashboard/_chart4.html.erb
@@ -11,7 +11,7 @@
               <span class="col-sm-4">
                   
                   <div class="input-group date" id="datetimepicker4" >  
-                      <input type="text" class="form-control" data-date-format="DD-MM-YYYY"/>
+                      <input type="text" class="form-control" data-date-format="YYYY-MM-DD"/>
                       <span class="input-group-addon">
                           <span class="glyphicon glyphicon-calendar"></span>
                       </span>
