--- a/app/views/partners/dashboard/_chart4.html.erb
+++ b/app/views/partners/dashboard/_chart4.html.erb
@@ -19,7 +19,7 @@
               </span>
           </div>
         
-        <div class="col-sm-12">
+        <div class="col-sm-12" style="min-height:200px;">
           <canvas class="hide" id="chart4" width="100%" height="40"></canvas>
           <div class="no-data-found" id="not-found4">
             <div>
