--- a/app/views/partners/dashboard/_chart5.html.erb
+++ b/app/views/partners/dashboard/_chart5.html.erb
@@ -18,7 +18,7 @@
               </span>
           </div>
         
-        <div class="col-sm-12">
+        <div class="col-sm-12" style="min-height:200px;">
           <canvas class="hide" id="chart5" width="100%" height="40"></canvas>
           <div class="no-data-found" id="not-found5">
             <div>
