--- a/app/views/partners/kols/children.html.erb
+++ b/app/views/partners/kols/children.html.erb
@@ -1,4 +1,14 @@
-<p>shifu <%= @kol.name %> 的徒弟列表</p>
+<h3>师傅 <%= @kol.name %> 的徒弟列表</h3>
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>师傅名称：</th>
+      <th>师傅手机号码：</th>
+      <th>徒弟数量：</th>
+    </tr>
+  </thead>
+</table>
 
 <div class="panel panel-default">
   <div class="panel-heading">
