marketing_dashboard recharge credit and amount

--- a/app/views/marketing_dashboard/users/recharge.html.erb
+++ b/app/views/marketing_dashboard/users/recharge.html.erb
@@ -7,7 +7,7 @@
       <%= form_tag marketing_dashboard_user_recharge_path, class: "form" do %>
         <div class="form-group">
           <label>充值金额</label>
-          <%= text_field_tag :credits, nil, required: true, class: "form-control", :placeholder => "输入充值金额" %>
+          <%= text_field_tag :credits, nil, class: "form-control", :placeholder => "输入充值金额" %>
         </div>
         <div class="form-group">
           <label>赠送积分</label>
