redis_extends ios_detail invite_switch

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -404,6 +404,12 @@
             <li>
               <%= link_to "配置促销送积分", marketing_dashboard_utilities_promotions_path %>
             </li>
+            <li>
+              <%= link_to "IOS版本控制",  ios_detail_marketing_dashboard_utilities_redis_extends_path %>
+            </li>
+            <li>
+              <%= link_to "邀请码开关",  invite_switch_marketing_dashboard_utilities_redis_extends_path %>
+            </li>
           </ul>
         </li>
         <% end %>
