--- a/client/assets/stylesheets/lib/activity_card.scss
+++ b/client/assets/stylesheets/lib/activity_card.scss
@@ -5,7 +5,7 @@
   background-color: #403e3f;
   background-image: linear-gradient(to right, #403e3f, #2f2d2e);
   box-shadow: 3.5px 6.062px 13px 1px rgba(0, 0, 0, 0.15);
-  padding: 0 40px 0 340px;
+  padding: 0 30px 0 330px;
   height: 250px;
 
   .summary {
@@ -243,7 +243,7 @@
       }
 
       .remain-time {
-        padding-left: 30px;
+        // padding-left: 30px;
         text-align: center;
       }
 
@@ -281,14 +281,20 @@
         }
 
         &:last-child {
-          text-align: right;
+          // text-align: right;
           &:after {
             display: none !important;
           }
         }
 
         &:first-child {
-          text-align: left;
+          // text-align: left;
+        }
+      }
+
+      &.grid-5 {
+        li {
+          width: 20%;
         }
       }
 
