--- a/app/views/marketing_dashboard/utilities/admintag_strategies/index.html.erb
+++ b/app/views/marketing_dashboard/utilities/admintag_strategies/index.html.erb
@@ -1,6 +1,6 @@
 <h3>
   第三方合作价格配置
-  <%= link_to '新建第三方价格配置', '', class: 'btn btn-primary pull-right' %>
+  <%= link_to '新建第三方价格配置', new_marketing_dashboard_utilities_admintag_strategy_path, class: 'btn btn-primary pull-right' %>
 </h3>
 
 <hr>
@@ -23,12 +23,12 @@
       <th>合作方</th>
       <th>注册奖励</th>
       <th>邀请奖励</th>
-      <th>邀请奖励管理员金额</th>
+      <th>管理员邀请额外奖励</th>
       <th>首次任务奖励</th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>活动单价比例</th>
+      <th>管理员活动抽成比例</th>
+      <th>师傅抽成比例</th>
+      <th>操作</th>
     </tr>
   </thead>
   <tbody>
@@ -36,14 +36,16 @@
       <tr>
         <td><%= ele.id %></td>
         <td><%= ele.admintag.tag %></td>
-        <td><%= ele.register_bounty %></td>
-        <td><%= ele.invite_bounty %></td>
-        <td><%= ele.invite_bounty_for_admin %></td>
-        <td><%= ele. first_task_bounty%></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><%= ele.register_bounty %>/元</td>
+        <td><%= ele.invite_bounty %>/元</td>
+        <td><%= ele.invite_bounty_for_admin %>/元</td>
+        <td><%= ele.first_task_bounty%>/元</td>
+        <td><%= show_percentage(ele.unit_price_rate_for_kol) %></td>
+        <td><%= show_percentage(ele.unit_price_rate_for_admin) %></td>
+        <td><%= show_percentage(ele.master_income_rate) %></td>
+        <td>
+          <%= link_to '编辑', edit_marketing_dashboard_utilities_admintag_strategy_path(ele) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
