marketing_dashboard admintag strategies

--- a/app/views/marketing_dashboard/utilities/admintag_strategies/new.html.erb
+++ b/app/views/marketing_dashboard/utilities/admintag_strategies/new.html.erb
@@ -1,95 +1,5 @@
-<h3>XXX价格配置</h3>
+<h3>新建合作方的价格配置</h3>
 
 <hr>
 
-<%= form_for(@admintag_strategy, url: marketing_dashboard_utilities_admintag_strategies_path, html: { class: "form-horizontal"}) do |f| %>
-
-  <h4>合作方</h4>
-    <div class="form-group">
-      <label for="" class="col-sm-3 control-label">Admin Tag: </label>
-      <div class="col-sm-3">
-        <%= f.select :admintag_id, Admintag.all.collect{|ele| [ele.tag, ele.id]}, {}, class: "form-control" %>
-      </div>
-    </div>
-  <h4>注册</h4>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">注册奖励：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :register_bounty, class: "form-control" %>
-        <div class="input-group-addon">元</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">邀请好友奖励：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :invite_bounty, class: "form-control" %>
-        <div class="input-group-addon">元</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">注册成功管理员奖励：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :invite_bounty_for_admin, class: "form-control" %>
-        <div class="input-group-addon">元</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">首次任务奖励：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :first_task_bounty, class: "form-control" %>
-        <div class="input-group-addon">元</div>
-      </div>
-    </div>
-  </div>
-
-  <h4>活动</h4>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">KOL单价比例：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :unit_price_rate_for_kol, class: "form-control", max: 100, min: 0 %>
-        <div class="input-group-addon">%</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">管理员抽成比例：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :unit_price_rate_for_admin, class: "form-control", readonly: true, max: 100, min: 0 %>
-        <div class="input-group-addon">%</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="" class="col-sm-3 control-label">师傅抽成比例：</label>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <%= f.number_field :master_income_rate, class: "form-control" %>
-        <div class="input-group-addon">%</div>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-3">
-      <button type="submit" class="btn btn-primary">提 交</button>
-    </div>
-  </div>
-<% end %>
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('#admintag_strategy_unit_price_rate_for_kol').bind('keyup change', function() {
-      var max_val = 100;
-      var kol_val = $(this).val();
-      $('#admintag_strategy_unit_price_rate_for_admin').val(parseInt(max_val - kol_val));
-    });
-  });
-</script>
+<%= render 'form' %>
