--- a/app/views/marketing_dashboard/utilities/admintag_strategies/_form.html.erb
+++ b/app/views/marketing_dashboard/utilities/admintag_strategies/_form.html.erb
@@ -28,6 +28,15 @@
     </div>
   </div>
   <div class="form-group">
+    <label for="" class="col-sm-3 control-label">每日最多邀请奖励次数：</label>
+    <div class="col-sm-3">
+      <div class="input-group">
+        <%= f.number_field :invites_max_count, class: "form-control" %>
+        <div class="input-group-addon">次</div>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
     <label for="" class="col-sm-3 control-label">注册成功管理员奖励：</label>
     <div class="col-sm-3">
       <div class="input-group">
