--- a/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/_statistics.html.erb
@@ -21,6 +21,16 @@
       </div>
     </div>
   </div>
+  <div class="col-lg-3 col-md-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading text-right">
+        <div>
+          <span class="huge"><%= $redis.get('elastic_article_red_money').to_f/100 %></span>元
+        </div>
+        <div>红包发放总额</div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
